# FlightPriceTracker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
controllers/: FlightController.cpp  FlightController.h
database/: Database.cpp  Database.h  init.sql
models/: Flight.cpp  Flight.h  PriceHistory.cpp  PriceHistory.h
services/: AnalysisEngine.cpp  AnalysisEngine.h  FlightManager.cpp  FlightManager.h
static/css/: style.css
static/js/: analysis.js  api.js  dashboard.js  flights.js  statistics.js
templates/: analysis.html  dashboard.html  flights.html  statistics.html
